[tool.poetry]
name = "speedcopy"
version = "2.1.3"
description = ""
authors = ["Ondrej Samohel <annatar@annatar.net>"]

[tool.poetry.dependencies]
python = ">=2.7"
pysendfile = {version = "^2.0.1", markers = "(sys_platform == 'linux' or sys_platform == 'darwin') and python_version ~= '2.7'"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
